feat: Update API endpoints
