# docs/swagger.json
@@ -9,8 +9,13 @@
     "host": "localhost:8888",
     "basePath": "/",
     "paths": {
-        "/api/v1/conmpany_form/create": {
+        "/api/v1/company_form/create": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create Company Form",
                 "consumes": [
                     "application/json"
@@ -55,8 +60,13 @@
                 }
             }
         },
-        "/api/v1/conmpany_form/{company_id}": {
+        "/api/v1/company_form/{company_id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get Company Form By company ID",
                 "consumes": [
                     "application/json"
@@ -108,6 +118,11 @@
         },
         "/api/v1/departments/add": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create department in company",
                 "consumes": [
                     "application/json"
@@ -154,6 +169,11 @@
         },
         "/api/v1/departments/company/{company_id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get Departments By company ID",
                 "consumes": [
                     "application/json"
@@ -407,6 +427,9 @@
             "post": {
                 "description": "Create new company accout",
                 "consumes": [
+                    "application/json"
+                ],
+                "produces": [
                     "application/json"
                 ],
                 "tags": [
