# internal/handler/company_form_handler.go
@@ -30,10 +30,11 @@ func NewCompanyFormHandler(service CompanyFormService, cfg *config.Config) *Comp
 // @Tags company_form
 // @Accept json
 // @Produce json
+// @Security BearerAuth
 // @Param request body dto.CompanyFormRequest true "CompanyForm credentials"
 // @Success 201 {object} map[string]string
 // @Failure 400 {object} map[string]string
-// @Router /api/v1/conmpany_form/create [post]
+// @Router /api/v1/company_form/create [post]
 func (h *CompanyFormHandler) CreateCompanyForm(c *gin.Context) {
 	var f *dto.CompanyFormRequest
 	if err := c.BindJSON(&f); err != nil {
@@ -53,11 +54,12 @@ func (h *CompanyFormHandler) CreateCompanyForm(c *gin.Context) {
 // @Tags company_form
 // @Accept json
 // @Produce json
+// @Security BearerAuth
 // @Param company_id path string true "Company ID"
 // @Success 200 {object} map[string]interface{}
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
-// @Router /api/v1/conmpany_form/{company_id} [get]
+// @Router /api/v1/company_form/{company_id} [get]
 func (h *CompanyFormHandler) GetCompanyFormByCompanyID(c *gin.Context) {
 	company_id, err := uuid.Parse(c.Param("company_id"))
 	if err != nil {
